# test_project

./: .env.example  README.md  manage.py  pyproject.toml
network_obj/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
network_obj/migrations/: 0001_initial.py  0002_initial.py
trade_network/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  serializers.py  urls.py
user/migrations/: 0001_initial.py
